<resources>
    <string name="app_name">UdacityAndroid</string>

    <string name="action_settings">Settings</string>
    <string name="landing_activity_title">My App Portfolio</string>
    <string name="welcome_message">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="score_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
