<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LandingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_message"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:id="@+id/welcome_message"/>

    <Button
        style="@style/AppPortfolioButtons"
        android:layout_below="@id/welcome_message"
        android:text="@string/spotify_streamer"
        android:layout_marginTop="35dp"
        android:id="@+id/spotify_streamer_button"/>

    <Button
        style="@style/AppPortfolioButtons"
        android:layout_below="@id/spotify_streamer_button"
        android:text="@string/score_app"
        android:id="@+id/score_app_button"/>

    <Button
        style="@style/AppPortfolioButtons"
        android:layout_below="@id/score_app_button"
        android:text="@string/library_app"
        android:id="@+id/library_app_button"/>

    <Button
        style="@style/AppPortfolioButtons"
        android:layout_below="@id/library_app_button"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger_button"/>

    <Button
        style="@style/AppPortfolioButtons"
        android:layout_below="@id/build_it_bigger_button"
        android:text="@string/bacon_reader"
        android:id="@+id/bacon_reader_button"/>

    <Button
        style="@style/AppPortfolioButtons"
        android:layout_below="@id/bacon_reader_button"
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:background="#f44336"/>

</RelativeLayout>
